messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-green
  labels:
    app: messaging-app
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-app
      version: green
  template:
    metadata:
      labels:
        app: messaging-app
        version: green
    spec:
      containers:
        - name: django
          image: ghcr.io/estifanos/messaging:v2
          ports:
            - containerPort: 8000
