messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: messaging.local # only works with /etc/hosts or external DNS
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: messaging-app # your Django Service
                port:
                  number: 80 # Service port
